solved overflow issue

--- a/style/style.css
+++ b/style/style.css
@@ -26,7 +26,6 @@ section {
 }
 body {
   line-height: 1;
-  overflow: hidden;
 }
 
 .container {
